Added in nice bootstrap template

--- a/templates/test.html
+++ b/templates/test.html
@@ -8,6 +8,12 @@
     <script src="{{ url_for(".static", filename="js/rtdGps.js") }}"></script>
   </head>
   <body>
+    <select>
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select>
     <div id="map-canvas"></div>
   </body>
 </html>
