added in search button, better listener

--- a/templates/index[Conflict].html
+++ b/templates/index[Conflict].html
@@ -49,16 +49,11 @@
       </div>
         <!-- TODO, POPULATE THIS FROM DATABSE -->
         <select class="form-control" id="destinationSelect">
-          <option selected="selected" disabled="disabled">Select a Stop</option>
-          <option value="boulder_transit_center">boulder_transit_center</option>
-          <option value="broadway_16th">broadway_16th</option>
-          <option value="broadway_27th">broadway_27th</option>
-          <option value="table_mesa_pr">table_mesa_pr</option>
-          <option value="mcaslin_pr">mcaslin_pr</option>   
-          <option value="flatiron_circle_pr">flatiron_circle_pr</option>
-          <option value="church_ranch_pr">church_ranch_pr</option>
-          <option value="wewatta_21st">wewatta_21st</option>
-          <option value="union_station">union_station</option>
+          <option value="1">Stop 1</option>
+          <option value="2">Stop 2</option>
+          <option value="3">Stop 3</option>
+          <option value="4">Stop 4</option>
+          <option value="5">Stop 5</option>
         </select>
       <hr>      
 
@@ -75,9 +70,8 @@
           <option value="500">500 meters</option>
         </select>
       <hr>      
-      <div class="center-block btn btn-primary" id="startButton">Start</div>
-      
-      <hr>
+
+
 
       <div class="panel panel-default">
         <div class="panel-heading"><h4>About </h4></div>
