--- a/templates/index.html
+++ b/templates/index.html
@@ -38,11 +38,11 @@
         <!-- TODO, POPULATE THIS FROM DATABSE -->
         <select class="form-control" id="busLineSelect">
           <option selected="selected" disabled="disabled">Select a Bus Line</option>
-          <option value="1">BV</option>
+<!--           <option value="1">BV</option>
           <option value="2">BX</option>
           <option value="3">BMX</option>
           <option value="4">Foo</option>
-          <option value="5">Bar</option>
+          <option value="5">Bar</option> -->
         </select>
       <hr>
       
@@ -100,6 +100,8 @@
     </div>    
   </div>
 <!-- end template -->
+
+
 	<!-- script references -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>    
@@ -108,4 +110,26 @@
     <script src="http://fgnass.github.io/spin.js/spin.min.js"></script>
     <script src="{{ url_for(".static", filename="js/rtdGpsNew.js") }}"></script>
 	</body>
+
+
+    <script>
+      var busLineForm = document.getElementById('busLineSelect')
+      //these are the routes given by python
+      var routes = {{ busRoutes|safe }}
+
+      //go through all of the routes, and add them to the bus lines. 
+      for (route of routes){
+        var routeString = route.properties.ROUTE
+
+        var x = document.createElement("OPTION");
+        x.setAttribute("value", route.properties.ROUTE);
+
+        var t = document.createTextNode(route.properties.ROUTE);
+        x.appendChild(t);
+
+        document.getElementById('busLineSelect').appendChild(x);
+      }
+
+    </script>
+
 </html>
