worked on route for the stop ajax request

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDh5Yw1A9sdux0lFCw3cjBN4UdKRwOukSo&sensor=false&libraries=geometry"></script>
     <!--     <script src="{{ url_for(".static", filename="js/rtdGps.js") }}"></script>-->    
     <script src="http://fgnass.github.io/spin.js/spin.min.js"></script>
-    <script src="{{ url_for(".static", filename="js/rtdGpsNew.js") }}"></script>
+    <script src="{{ url_for(".static", filename="js/rtdGps.js") }}"></script>
 	</body>
 
 
