--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,7 @@
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDh5Yw1A9sdux0lFCw3cjBN4UdKRwOukSo&sensor=false&libraries=geometry"></script>
-    <script src="{{ url_for(".static", filename="js/rtdGps.js") }}"></script>
+    <script src="{{ url_for(".static", filename="js/rtdGpsOld.js") }}"></script>
   </head>
   <body>
     <select>
