Working on popup box. Changing soon

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,12 +89,14 @@
 
 	<!-- script references -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>    
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDh5Yw1A9sdux0lFCw3cjBN4UdKRwOukSo&sensor=false&libraries=geometry"></script>
     <script src="http://fgnass.github.io/spin.js/spin.min.js"></script>
     <script src="{{ url_for(".static", filename="js/rtdGps.js") }}"></script>
+    <script src="{{ url_for(".static", filename="js/bootbox.min.js") }}"></script>
 
-	</body>
+    </body>
 
 
     <script>
