Looks good on mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,34 +26,33 @@
 <div class="container-fluid" id="main">
   <div class="row">
     <!-- Size text defined here. Define size of map in styles.css -->
-    <div class="col-xs-4" id="left">
+    <div class="col-xs-5" id="left">
     
-    <!-- <h3>Select a bus line, a stop, and a distance to be woken up!</h3>-->   
-    <h3> SELECT A WAKEUP DISTANCE TO ACTIVATE THE MAP </h3>   
-      
+     <h4>Select a bus line, stop, and distance to be woken!</h4>   
+
       <!-- item list -->
       <div class="panel panel-default">
-        <div class="panel-heading"><h4>Bus Line</h4></div>
+        <div class="panel-heading"><h4>Line</h4></div>
       </div>
 
         <select class="form-control" id="busLineSelect">
-          <option selected="selected" disabled="disabled">Select a Bus Line</option>
+          <option selected="selected" disabled="disabled">Select</option>
         </select>
       <hr>
       
       <div class="panel panel-default">
-        <div class="panel-heading"><h4>Desired Stop</h4></div>
+        <div class="panel-heading"><h4>Stop</h4></div>
       </div>
         <select class="form-control" id="busStopSelect">
-          <option selected="selected" disabled="disabled">Select a Stop</option>
+          <option selected="selected" disabled="disabled">Select</option>
         </select>
       <hr>      
 
       <div class="panel panel-default">
-        <div class="panel-heading"><h4>Wakeup distance</h4></div>
+        <div class="panel-heading"><h4>Distance</h4></div>
       </div>
         <select class="form-control" id="toleranceSelect">
-          <option selected="selected" disabled="disabled">Select a Distance to wakeup to activate</option>
+          <option selected="selected" disabled="disabled">Select</option>
           <option value="5000">5000 meters</option>
           <option value="2500">2500 meters</option>
           <option value="1500">1500 meters</option>
@@ -68,7 +67,7 @@
       <div class="panel panel-default">
         <div class="panel-heading"><h4>About </h4></div>
       </div>
-      <p>This is for our Data Engineering Class -- PUT INFO ABOUT THE PROGRAM HERE</p>
+      <p>Data Engineering Class Final Project</p>
 
 <!--       <hr>
       <p>
@@ -77,7 +76,7 @@
       
       <hr>    
       <p>
-      <a href="https://github.com/antsankov/rtd-gps" target="_ext" class="center-block btn btn-primary">Check out the Source Code!</a>
+      <a href="https://github.com/antsankov/rtd-gps" target="_ext" class="center-block btn btn-primary">Source</a>
       </p>
         
       <hr>      
