--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -54,10 +54,11 @@ body{
 }
 
 #map-canvas {
-	width:64.3333%;
+/*	width:58.15%; */
+    width:59.15%;
     height:calc(100% - 0);
     position:absolute;
-    right:16px;
+    right:0px;
     top:50px;
     bottom:0;
     overflow:hidden;
